# Englight

./: .env  run.txt
backend/: pyproject.toml
backend/app/: backend_preload.py  main.py  models.py  schemas.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2315830ced38_.py  2eae53577355_user_nullable_false_role_user_by_default.py  74af958bb867_first_commit.py  975e0283fe76_.py  a02f6f949b51_.py  ad9c30b85dd5_add_hashed_password_in_table_user.py  d094c6365cf9_.py
backend/app/api/: deps.py  main.py
backend/app/api/routers/: admin.py
backend/app/api/routers.py/user/: login.py  users.py
backend/app/api/routers/deck/: decks.py
backend/app/api/routers/user/: login.py  users.py
backend/app/api/routers/word/: words.py
backend/app/core/: config.py  database.py  security.py
backend/app/services/: deck.py  user.py  word.py
frontend/my-app/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/my-app/src/: App.tsx  api.ts  index.css
frontend/my-app/src/components/: Button.tsx  Deck.tsx  Footer.tsx  Fortune.tsx  FortuneCanvaModule.tsx  Header.tsx  Input.tsx  LoginForm.tsx  MainContent.tsx  Message.tsx  MyProfile.tsx  RigesterForm.tsx  Settings.tsx
frontend/my-app/src/pages/: AdminPage.tsx  FortunePage.tsx  Home.tsx  LoginPage.tsx  MyProfilePage.tsx  RegisterPage.tsx  SettingsPage.tsx
frontend/my-app/src/styles/: Admin.module.css  Base.module.css  Deck.module.css  Footer.module.css  Fortune.module.css  LRForm.module.css  (+4 more)
frontend/my-app/useless_items/: CardMenu.module.css  Fortune.tsx  FortuneCanvas.tsx  try.tsx
(+8 files in other folders)
